--- a/style.css
+++ b/style.css
@@ -8,13 +8,16 @@ html {
 }
 
 h1 {
-font-family: "Borel";
+font-family: "Zain";
+font-size: 60px;
 color: rgb(190, 129, 15);
+border-bottom: 1px solid rgb(190, 129, 15);
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Zain";
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -22,36 +25,74 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
-    background-color: #fff;
+    background-color:rgba(255, 255, 255, 0.425);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: auto;
+    transition: width 0.3s, height 0.3s;
+}
+
+#conteudo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 25px;
 }
 
 #carta-container {
-    border: 1.5px solid;
-    border-image-slice: 1;
-    border-image-source: linear-gradient(328deg, rgb(170, 111, 0), rgb(140, 213, 255));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1.5px solid rgb(143, 93, 0);
+    overflow: hidden;
 }
 
 #carta-imagem {
     height: auto;
     border-radius: 10px;
+    width: 100%;
+    display: none;
+}
+
+#clique {
+    font-family: "Zain";
+    font-size: 18px;
+    color: #000000;
+}
+
+#coração {
+    color:rgb(190, 129, 15);
+    font-size: 35px;
 }
 
 #descrição-carta {
-    font-family: "Zain";
+    font-family: "Borel";
+    text-align: center;
     margin-top: 10px;
-    font-size: 25px;
+    font-size: 38px;
     color:rgb(190, 129, 15);
 }
 
-#animacao-container {
-    position: relative;
-    height: 100px;
-    margin: 20px 0;
-    overflow: hidden;
+#descrição-extra {
+    font-family: "Zain";
+    max-width: 500px;
+    font-size: 18px;
+    color: #000000;
+    text-align: left;
+    margin-left: 20px;
+}
+
+.buttons-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+    border-top: 1px solid rgb(190, 129, 15);
+    padding-top: 25px;
 }
 
 button {
@@ -60,8 +101,8 @@ button {
     font-size: 20px;
     cursor: pointer;
     border: none;
-    background-color: rgb(190, 129, 15);
-    color: #fff;
+    background-color: rgb(151, 100, 4);
+    color: #ffffff;
     border-radius: 10px;
     margin: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -70,4 +111,12 @@ button {
 button:hover {
     background-color: #ffffff;
     color: rgb(190, 129, 15);
+}
+
+footer {
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    color: rgb(83, 83, 83);
 }
